# trello_analogue

./: .gitignore  .pdm-python  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
alembic/: env.py
backend/: .pdm-python  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements-test.txt
backend/alembic/: env.py
backend/alembic/versions/: 3015b805cb41_add_assignee_to_tasks.py  73ca8b420593_id_from_cards_not_unique.py  9251d26360e1_add_shares.py  9314a732aacd_initial_migration.py  9d404cd75601_add_task_number_to_card.py  ab09b5fd97e9_add_card_color_and_list_color.py  ab69d78c72c1_add_background_color_to_board_model.py  ed3f0f7d2408_add_comments_table.py
backend/app/: backend_pre_start.py  main.py  tasks.py
backend/app/core/: config.py  deps.py  security.py
backend/app/crud/: board.py  board_share.py  card.py  comment.py  list.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  board.py  board_list.py  board_share.py  card.py  comment.py  user.py
backend/app/schemas/: board.py  card.py  comment.py  list.py  user.py
backend/app/templates/: email_notification.html
backend/src/: main.py  tasks.py
backend/src/core/: config.py  deps.py  security.py
backend/src/crud/: board.py  board_share.py  card.py  comment.py  list.py  user.py
backend/src/db/: session.py
backend/src/models/: base.py  board_list.py  board_share.py  card.py  comment.py  user.py
backend/src/repositories/: __init__.py  base.py  board.py  board_share.py  card.py  comment.py  factory.py  list.py  user.py
backend/src/schemas/: board.py  card.py  comment.py  token.py  user.py
backend/src/services/: __init__.py  board.py  board_share.py  card.py  comment.py  factory.py  list.py  user.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_boards.py  test_cards.py  test_lists.py
(+104 files in other folders)
