[project]
name = "trello_analogue"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Klimov.A", email = "klimovaleksanr@gmail.com"},
]
dependencies = ["fastapi>=0.115.11", "uvicorn>=0.34.0", "sqlalchemy>=2.0.38", "asyncpg>=0.30.0", "alembic>=1.15.1", "pydantic-settings>=2.8.1", "python-multipart>=0.0.20", "python-jose[cryptography]>=3.4.0", "passlib[bcrypt]>=1.7.4", "pydantic[email]>=2.10.6"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
