[project]
name = "trello_analogue"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Klimov.A", email = "klimovaleksanr@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.115.11",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.38",
    "asyncpg>=0.30.0",
    "alembic>=1.15.1",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.10.6",
    "celery[redis]>=5.4.0",
    "jinja2>=3.1.6",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.19.0",
    "pytest-cov>=4.1.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
ignore = ["W291", "E203", "W503", "E231"]
exclude = [
    ".git",
    "__pycashe__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    "__pypackeges__"
]
max-line-length = 120
count = true
